--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
         <header>
             <div class="container">
                 <div class="row">
-                    <div class="col-12">
-                        <h1><a class="navbar-brand" href="#"> IT Kino</a></h1>
+                    <div class="col-12 mt-3">
+                        <h1><a href="#"> IT Kino</a></h1>
                         <p><small>Քո սիրելի ֆիլմերը մեզ մոտ</small></p>
                     </div>
                 </div>
@@ -60,7 +60,7 @@
                             <h2>Նոր ֆիլմեր</h2>
                             <hr>
                             <div class="row">
-                                <a href="films.html" class="col-12 col-sm-6 col-md-3">
+                                <a href="view.html" class="col-12 col-sm-6 col-md-3">
                                     <div class="card">
                                         <img src="assets/img/badboys.jpg" class="card-img-top" alt="bad boys film">
                                         <div class="card-body">
@@ -68,7 +68,7 @@
                                         </div>
                                     </div>
                                 </a>
-                                <a href="films.html" class="col-12 col-sm-6 col-md-3">
+                                <a href="view.html" class="col-12 col-sm-6 col-md-3">
                                     <div class="card">
                                         <img src="assets/img/joker.jpg" class="card-img-top" alt="joker film">
                                         <div class="card-body">
@@ -76,7 +76,7 @@
                                         </div>
                                     </div>
                                 </a>
-                                <a href="films.html" class="col-12 col-sm-6 col-md-3">
+                                <a href="view.html" class="col-12 col-sm-6 col-md-3">
                                     <div class="card">
                                         <img src="assets/img/jumanji.jpg" class="card-img-top" alt="jumanji film">
                                         <div class="card-body">
@@ -84,7 +84,7 @@
                                         </div>
                                     </div>
                                 </a>
-                                <a href="films.html" class="col-12 col-sm-6 col-md-3">
+                                <a href="view.html" class="col-12 col-sm-6 col-md-3">
                                     <div class="card">
                                         <img src="assets/img/sonic.jpg" class="card-img-top" alt="sonic film">
                                         <div class="card-body">
@@ -98,7 +98,7 @@
                             <h2>Նոր սերիալներ</h2>
                             <hr>
                             <div class="row">
-                                <a href="serials.html" class="col-12 col-sm-6 col-md-3">
+                                <a href="view.html" class="col-12 col-sm-6 col-md-3">
                                     <div class="card">
                                         <img src="assets/img/bardzrlarum.webp" class="card-img-top" alt="Bardzr Larum film">
                                         <div class="card-body">
@@ -106,7 +106,7 @@
                                         </div>
                                     </div>
                                 </a>
-                                <a href="serials.html" class="col-12 col-sm-6 col-md-3">
+                                <a href="view.html" class="col-12 col-sm-6 col-md-3">
                                     <div class="card">
                                         <img src="assets/img/misisdevis.webp" class="card-img-top" alt="Miss Devis film">
                                         <div class="card-body">
@@ -114,15 +114,15 @@
                                         </div>
                                     </div>
                                 </a>
-                                <a href="serials.html" class="col-12 col-sm-6 col-md-3">
+                                <a href="view.html" class="col-12 col-sm-6 col-md-3">
                                     <div class="card">
-                                        <img src="assets/img/meznicverjinnery.webp" class="card-img-top" alt="Meznic verjinnery film">
+                                        <img src="assets/img/arqan.webp" class="card-img-top" alt="Arqan film">
                                         <div class="card-body">
-                                            <p class="card-text">Մեզնից վերջինները</p>
+                                            <p class="card-text">Արքան</p>
                                         </div>
                                     </div>
                                 </a>
-                                <a href="serials.html"  class="col-12 col-sm-6 col-md-3">
+                                <a href="view.html"  class="col-12 col-sm-6 col-md-3">
                                     <div class="card">
                                         <img src="assets/img/citadel.webp" class="card-img-top" alt="Citadel film">
                                         <div class="card-body">
@@ -132,24 +132,45 @@
                                 </a>
                             </div>
                         </div>
-
-                        <div class="film-groups">
-                            <h2>"Joker" ֆիլմի նկարահանումները</h2>
+                        <div class="news mt-5">
+                            <h2>Joker" ֆիլմի նկարահանումները</h2>
                             <hr>
-                            <div class="card film-groups-card">
-                                <div class="card-body">
-                                    <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus vel ullamcorper ex, sit amet hendrerit est. Nullam sodales consectetur purus. Aenean id vestibulum mi, vitae faucibus quam. Donec eget blandit ligula, tincidunt iaculis lectus. Duis volutpat sapien sit amet neque mattis tempor. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. </p>
-                                    <a href="#" class="btn btn-primary">Դիտել</a>
+                            <div class="card film-groups mb-3">
+                                <div class="row no-gutters">
+                                    <div class="col-md-4">
+                                        <img class="w-100" src="assets/img/joker.jpg" alt="...">
+                                    </div>
+                                    <div class="col-md-8">
+                                        <div class="card-body">
+                                            <div class="card film-groups-card">
+                                                <div class="card-body">
+                                                    <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus vel ullamcorper ex, sit amet hendrerit est. Nullam sodales consectetur purus. Aenean id vestibulum mi, vitae faucibus quam. Donec eget blandit ligula, tincidunt iaculis lectus. Duis volutpat sapien sit amet neque mattis tempor. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. </p>
+                                                    <a href="view.html" class="btn btn-primary">Դիտել</a>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
                                 </div>
                             </div>
                         </div>
-                        <div class="film-groups">
+                        <div class="news mt-5">
                             <h2>Մասնագետները "Venom" ֆիլմի մասին</h2>
                             <hr>
-                            <div class="card film-groups-card">
-                                <div class="card-body">
-                                    <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus vel ullamcorper ex, sit amet hendrerit est. Nullam sodales consectetur purus. Aenean id vestibulum mi, vitae faucibus quam. Donec eget blandit ligula, tincidunt iaculis lectus. Duis volutpat sapien sit amet neque mattis tempor. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. </p>
-                                    <a href="#" class="btn btn-primary">Դիտել</a>
+                            <div class="card film-groups mb-5">
+                                <div class="row no-gutters">
+                                    <div class="col-md-4">
+                                        <img class="w-100" src="assets/img/venom.jpg" alt="...">
+                                    </div>
+                                    <div class="col-md-8">
+                                        <div class="card-body">
+                                            <div class="card film-groups-card">
+                                                <div class="card-body">
+                                                    <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus vel ullamcorper ex, sit amet hendrerit est. Nullam sodales consectetur purus. Aenean id vestibulum mi, vitae faucibus quam. Donec eget blandit ligula, tincidunt iaculis lectus. Duis volutpat sapien sit amet neque mattis tempor. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. </p>
+                                                    <a href="view.html" class="btn btn-primary">Դիտել</a>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
                                 </div>
                             </div>
                         </div>
@@ -163,7 +184,7 @@
                                 <form>
                                     <div class="form-group">
                                         <div class="input-group">
-                                            <input type="text" class="form-control" placeholder="ֆիլմի անվանում" name="s" aria-describedby="search-btn">
+                                            <input type="text" class="form-control" placeholder="ֆիլմի անվանում" name="search" aria-describedby="search-btn">
                                             <div class="input-group-append">
                                                 <button class="btn btn-primary" type="submit" id="search-btn">
                                                     <i class="fa fa-search" aria-hidden="true"></i>
@@ -181,10 +202,10 @@
                             <div class="card-body">
                                 <form method="post">
                                     <div class="form-group">
-                                        <input type="email" class="form-control" id="email-input" placeholder="էլ. հասցե">
+                                        <input type="email" name="email" class="form-control" id="email-input" placeholder="էլ. հասցե">
                                     </div>
                                     <div class="form-group">
-                                        <input type="password" class="form-control" id="password-input" placeholder="գաղտնաբառ">
+                                        <input type="password" name="password" class="form-control" id="password-input" placeholder="գաղտնաբառ">
                                     </div>
                                     <button type="submit" class="btn btn-primary">
                                         <i class="fa fa-sign-in" aria-hidden="true"></i>
@@ -227,9 +248,9 @@
         </div>
         <footer class="text-lg-start text-white">
             <div class="container py-4 pb-0">
-                <div class="row">
+                <div class="row justify-content-between">
                     <!-- Grid column -->
-                    <div class=" text-center col-md-3 col-lg-3 col-xl-3 mx-auto mt-3">
+                    <div class=" text-center col-md-3 col-lg-3 col-xl-3">
                         <h5 class="text-uppercase mb-4 font-weight-bold">
                             IT Kino
                         </h5>
@@ -237,49 +258,50 @@
                             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra dolor sed est pretium, laoreet finibus risus sollicitudin. Nulla ultricies congue accumsan. 
                         </p>
                     </div>
-                    <div class=" text-center col-md-4 col-lg-3 col-xl-3 mx-auto mt-3">
+                    <div class=" text-center col-md-4 col-lg-3 col-xl-3">
                         <h5 class="text-uppercase mb-4 font-weight-bold">Follow us there:</h5>
                         <!-- Facebook -->
-                        <a class="btn btn-primary btn-floating m-1" style="background-color: #3b5998" href="#!" role="button">
+                        <a href="https://www.facebook.com" class="btn btn-primary btn-floating m-1" style="background-color: #3b5998" href="#!" role="button" target="_blank">
                             <i class="fa fa-facebook-square" aria-hidden="true"></i>
                         </a>
                         <!-- Twitter -->
-                        <a class="btn btn-primary btn-floating m-1" style="background-color: #3b5998" href="#!" role="button">
+                        <a href="https://www.twitter.com" class="btn btn-primary btn-floating m-1" style="background-color: #3b5998" href="#!" role="button" target="_blank">
                             <i class="fa fa-twitter-square" aria-hidden="true"></i>
                         </a>
                         <!-- Google -->
-                        <a class="btn btn-primary btn-floating m-1" style="background-color: #3b5998" href="#!" role="button">
+                        <a href="https://www.google.com" class="btn btn-primary btn-floating m-1" style="background-color: #3b5998" href="#!" role="button" target="_blank">
                             <i class="fa fa-google" aria-hidden="true"></i>
                         </a>
-            
                         <!-- Instagram -->
-                        <a class="btn btn-primary btn-floating m-1" style="background-color: #3b5998" href="#!" role="button">
+                        <a href="https://www.instagram.com" class="btn btn-primary btn-floating m-1" style="background-color: #3b5998" href="#!" role="button" target="_blank">
                             <i class="fa fa-instagram" aria-hidden="true"></i>
                         </a>
                     </div>
                     <!-- Grid column -->
-                    <div class=" text-center col-md-4 col-lg-3 col-xl-3 mx-auto mt-3">
+                    <div class=" text-center col-md-4 col-lg-3 col-xl-3">
                         <h5 class="text-uppercase mb-4 font-weight-bold">Contacts</h5>
-                        <p>
+                        <address class="text-decoration-none m-0">
                             <i class="fa fa-map-marker mr-2" aria-hidden="true"></i> 
                             Address
-                        </p>
-                        <p>
+                        </address>
+                        <a href="mailto:email@example.com" class="text-decoration-none d-block">
                             <i class="fa fa-envelope-o mr-2" aria-hidden="true"></i> 
                             itlezoo@gmail.com
-                        </p>
-                        <p>
+                        </a>
+                        <a href="tel:123456789" class="text-decoration-none d-block">
                             <i class="fa fa-phone mr-2" aria-hidden="true"></i> 
-                            + 01 234 567 88</p>
-                        <p>
+                            + 01 234 567 88
+                        </a>
+                        <a href="tel:123456789" class="text-decoration-none d-block">
                             <i class="fa fa-phone mr-2" aria-hidden="true"></i> 
-                            + 01 234 567 89</p>
+                            + 01 234 567 89
+                        </a>
                     </div>
                 </div>
             </div>
             <div class="text-center font-weight-lighter p-3" style="background-color: rgba(0, 0, 0, 0.2)">
-                © 2020 Copyright:
-                <a class="text-white" href="https://mdbootstrap.com/">MDBootstrap.com</a>
+                © 2023 Copyright:
+                <a class="text-white" href="#">Sophie Sargsyan</a>
             </div>
         </footer>
 
